--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -21,6 +21,26 @@ body {
 
 }
 
+header{
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: end;
+    padding-right: 30px;
+    padding-top: 20px;
+}
+
+header a {
+    margin-right: 20px;
+   
+}
+
+header a i { 
+    font-size: 1.6rem;
+    color: black;
+    cursor: pointer;
+}
+
 main {
     width: 100%;
     height: 100%;
